--- a/style/style.css
+++ b/style/style.css
@@ -15,7 +15,9 @@
     background-size: contain;
     justify-content: center;
     flex-shrink: 0;
-    margin: 50px 140px 0 150px;
+    margin: 0 auto;
+    margin-top: 50px;
+    
     
 }
 /* header-title */
@@ -35,15 +37,16 @@
     font-size: 72px;
     font-style: normal;
     font-weight: 900;
+   
     padding: 5px 344px 177px 344px;
-    
+     
 }
 /* main section one */
 .main-section-one{
     width: 1300px;
     height: 950px;
-    margin: 120px 140px 120px 140px;
-    border: 2px solid orange;
+    margin: 0 auto;
+    margin-top: 50px;
     align-items: center;
     
 }
@@ -88,7 +91,8 @@
     background-repeat: no-repeat;
     background-size: contain;
     flex-shrink: 0;
-    margin: 50px 140px 0 140px;
+    margin: 0 auto;
+    margin-top: 50px;
 }
 .main-section-two-welcome{
     color: #FFF;
@@ -143,8 +147,8 @@
     height: 482px;
     flex-shrink: 0;
     background:  linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
-    margin: 120px 140px 120px 140px;
-    border: 3px solid orange;
+    margin: 0 auto;
+    margin-top: 50px;
 }
 .third-div-1{
     max-width: 549px;
@@ -190,7 +194,8 @@
     max-width: 1320px;
     background: #FFF;
     display: flex;
-    margin: 120px 140px 120px 140px;
+    margin: 0 auto;
+    margin-top: 50px;
     
 }
 .best-offer{
@@ -214,7 +219,8 @@
         font-size: 48px;
         font-weight: 900;
         text-transform: capitalize;
-        margin: 22px 0 22px 0;
+        margin: 22px 0 22px 0; 
+        padding-bottom: 10px;
 }
 .coming-soon-details{
         max-width: 393px;
@@ -230,16 +236,21 @@
     max-height: 463px;
     border-radius: 100%;
     border: 15px solid #F00;
+    margin-top: 112px;
     margin-left: 70px;
     margin-right: 118px;
+    
+    
 
 }
 #image-section-four{
-    padding: 49px 49px 49px 49px;
+    padding:49px 49px 49px 49px;
 }
 .logo-24{
     max-width: 126px;
     height: 58px;
+    position:relative;
+    top: 50px;
     color: #F00;
     font-family: Inter;
     font-size: 48px;
@@ -252,15 +263,130 @@
     font-size: 20px;
     font-weight: 400;
     line-height: 32px; /* 160% */
+    margin-top: 160px;
+    
 }
 #group-96{
     width: 140px;
     height: 140px;
     flex-shrink: 0;
-    margin-bottom: 54px;
+    padding-top: 150px;
 }
 
 /* holiday section (section-five) */
+.section-five{
+    width: 1600px;
+    height: 1000px;
+}
+.comming-soon {
+    margin-top: 120px;
+}
+
+.comming-soon-new-section {
+    width: 1600px;
+    height: auto;
+    display: flex;
+    margin: auto;
+    gap: 150px;
+}
+
+.news-best {
+    color: #F00;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.comming-soon-title {
+    color: #070211;
+    font-family: Merriweather;
+    font-size: 48px;
+    font-weight: 900;
+    text-transform: capitalize;
+    margin-top: 16px;
+    margin-bottom: 22px;
+
+}
+
+.comming-soon-text {
+    color: rgba(7, 2, 17, 0.60);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 32px;
+    width: 393px;
+}
+
+.comming-soon-section-screl {
+    border: solid 15px;
+    border-radius: 100%;
+    color: red;
+    padding: 50px;
+    margin: auto;
+}
+
+.year {
+    color: #F00;
+    font-family: Inter;
+    font-size: 48px;
+    font-weight: 700;
+    margin-bottom: 16px;
+}
+
+.happy-new-year {
+    margin-top: 43px;
+}
+
+.comming-soon-section {
+    margin: auto;
+
+}
+.holiday-image{
+    background-image: url('../images/Rectangle\ 2.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 1320px;
+    height: 229px;
+    flex-shrink: 0;
+    border-radius: 16px 0px 16px 16px;
+    background: #F00;
+    position: relative;
+    top: 500px;
+    display: flex;
+    
+}
+
+#group-75{
+    position: relative;
+    bottom: 360px;
+    left:180px;
+}
+
+#group-44{
+    width: 206.841px;
+    height: 206.841px;
+    flex-shrink: 0;
+    position: relative;
+    bottom: 390px;
+    left: 180px;
+    z-index: 10;
+}   
+
+#rec1{
+    width: 429px;
+    height: 433px;
+    flex-shrink: 0;
+    border-radius: 16px 16px 0px 0px;
+    background: url('../images/Rectangle\ 1.png'), lightgray -59.98px 0px / 151.553% 100% no-repeat;
+    position: relative;
+    bottom: 432px;
+    left: 65px;
+}
+
+.holiday-image00{
+    /* display: flex; */
+}
+/* section end */
 
 /* footer */
 .footer-width{
@@ -268,6 +394,7 @@
     height: 609px;
     background: #070211;
     margin: 0 auto;
+    margin-top: 50px;
     background-size: cover;
     flex-shrink: 0;
 }
@@ -279,4 +406,298 @@
     font-weight: 500;
     line-height: 40px; /* 166.667% */
 }
+/* section five */
+.section-five{
+    max-width: 1320px;
+    /* height: 800px; */
+    background-repeat: no-repeat;
+    background-size: contain;
+    justify-content: center;
+    flex-shrink: 0;
+    margin: 50px 140px 0 150px;
+    /* border: 3px solid orange; */
+    position: relative;
+    
+}
+.bg-rec1{
+    background-image: url('../images/Rectangle\ 2.png');
+    background-repeat: no-repeat;
+    width: 1320px;
+    height: 229px;
+    flex-shrink: 0;
+    position: relative;
+    left: 0;
+    
+    
+}
+.five-sub-section{
+    display: flex;
+}
+#Rectangle-1{
+    max-width: 429px;
+    height: 433px;
+    margin-bottom: -40px;
+}
+#group-44{
+    max-width: 206px;
+    height: 206px;
+}
+#group-75{
+    max-width: 600px;
+    height: 600px;
+}
+.functional{
+    max-width: 263px;
+    height: 29px;
+    color: #070211;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+    padding-left: 600px;
+}
+    
+    
+.holyday-sell{
+    color: #F00;
+    text-align: center;
+    font-family: Merriweather;
+    font-size: 72px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+    padding: 2px 461px 5 462px;
+}
+sell-desc{
+    max-width: 1068px;
+    height: 91px;
+    color: rgba(7, 2, 17, 0.60);
+    color: rgba(7, 2, 17, 0.60);
+    text-align: center;
+    font-family: Inter;
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 32px; /* 160% */
+}
 
+/* unfinished upperm section */
+
+/* best gift section/ awesome portfollio */
+
+/* new section */
+
+.best-section{
+    width:896px ;
+    height: 100px;
+}
+
+.best-gift{
+    display: block;
+    max-width: 1320px;
+    margin:  auto;
+}
+
+.best-gift-title{
+    width: 192px;
+    height: 29px;
+    color: #F00;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;  
+}
+
+.Awesome-portfolio-title{
+    width: 566px;
+    height: 60px;
+    color: #070211;
+    font-family: Merriweather;
+    font-size: 48px;
+    font-weight: 900;;
+    text-transform: capitalize;
+}
+
+.portfollio details{
+    width: 896pxpx;
+    color: rgba(7, 2, 17, 0.60);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 32px; /* 160% */
+    margin-bottom: 46px;
+}
+
+
+.images-rec{
+    display: flex;
+    margin:  auto;
+    gap: 25px;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 24px;
+    margin-top: 48px;
+    
+    /* margin-top: 48px;    */
+}
+/* subscribe section */
+.subscribe-section{
+    max-width: 1320px;
+    height: 616px;
+    border-radius: 16px;
+    background: rgba(255, 0, 0, 0.05);
+    margin: 0 auto;
+    margin-top: 120px;
+    align-items: center;
+    text-align: center;
+}
+.email-iamge{
+    padding: 80px 585px 0 585px;
+    
+}
+.subscribe-news{
+    margin-top: 40px;
+    color: #070211;
+    align-items: center;
+    text-align: center;
+    font-family: Merriweather;
+    font-size: 48px;
+    font-weight: 900;
+    text-transform: capitalize;
+}
+.subscribe-details{
+    max-width: 896px;
+    margin: 0 auto;
+    color: rgba(7, 2, 17, 0.60);
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 32px; /* 160% */
+}
+.div-input{
+    display: flex;
+    margin-top: 48px;
+    padding: 0px 336px 80px 336px;
+
+}
+#input{
+    
+    width: 448px;
+    height: 72px;
+    flex-shrink: 0;
+    border-radius: 50px 0 0 50px;
+    background: #FFF;
+    color: rgba(7, 2, 17, 0.30);
+    text-align: center;
+    font-family: Inter;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-top: 48;
+    margin-bottom:80 ;
+    border: none;
+}
+#button{
+    color: #FFF;
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 600;
+    text-transform: capitalize;
+    width: 210px;
+    height: 72px;
+    flex-shrink: 0;
+    border-radius: 0px 50px 50px 0px;
+    background: #F00;
+    border: none;
+    cursor: pointer;
+}
+
+/* footer */
+
+footer {
+    background: #070211;
+}
+
+.footer {
+    width: 1600px;
+    justify-content: space-between;
+    display: flex;
+    align-items: center;
+    margin: auto;
+}
+
+.footer-text {
+    color: #FFF;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 40px;
+    margin-top: 120px;
+    margin-bottom: 50px;
+}
+
+hr {
+    background: rgba(255, 255, 255, 0.15);
+    width: 1600px;
+    height: 0.5px;
+    margin: auto;
+}
+
+.social-list {
+    width: 1600px;
+    display: block;
+    margin: auto;
+    align-items: center;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+#images-social {
+    padding-right: 24px;
+    margin: 48px auto;
+    transition: 0.5s all ease-in-out;
+}
+#images-social:hover{
+    transform: scale(1.2);
+    transition: 0.8s;
+}
+.fa-solid{
+    color: #FFF;
+    margin-right: 10px;
+}
+
+.footer-text-recive {
+    color: #FFF;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 40px;
+    margin-top: 50px;
+    margin-bottom: 120px;
+}
+
+.unsubscribe {
+    color: #FFF;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+    background: #070211;
+    border: none;
+    cursor: pointer;
+    transition: 0.5s all ease-in-out;
+}
+.unsubscribe:hover{
+    transform: 0.5s;
+    transform: scale(1.2);
+}
+.footer-text-2017{
+    margin-top: 50px;
+    margin-bottom: 120px;
+    color: #FFF;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 40px;
+}
