--- a/style/style.css
+++ b/style/style.css
@@ -239,11 +239,16 @@
 #image-section-four{
     padding:49px 49px 49px 49px;
 }
+
+.section-four-2024{
+    position: relative;
+    top: 150px;
+}
 .logo-24{
     max-width: 126px;
     height: 58px;
-    position:relative;
-    top: 50px;
+    margin-bottom: 20px;
+    position:relative; 
     color: #F00;
     font-family: Inter;
     font-size: 48px;
@@ -256,16 +261,14 @@
     font-size: 20px;
     font-weight: 400;
     line-height: 32px; /* 160% */
-    margin-top: 160px;
-    
+
 }
 #group-96{
     width: 140px;
     height: 140px;
     flex-shrink: 0;
-    padding-top: 150px;
+    margin: 40px;
 }
-
 /* holiday section (section-five) */
 .section-five{
     width: 1320px;
@@ -366,11 +369,9 @@
     left: 86px;
 }
 
-
 /* new section */
 
 /* section end */
-
 
 .bg-rec1{
     background-image: url('../images/Rectangle\ 2.png');
