--- a/style/style.css
+++ b/style/style.css
@@ -537,6 +537,11 @@
     border: none;
     cursor: pointer;
 }
+#button:hover{
+    background: #000;
+    color: white;
+    transition: 1.3s;
+}
 
 /* footer */
 
