--- a/style/style.css
+++ b/style/style.css
@@ -42,7 +42,7 @@
 }
 /* main section one */
 .main-section-one{
-    width: 1500px;
+    max-width: 1320px;
     height: 850px;
     margin: 0 auto;
     margin-top: 100px;
@@ -70,13 +70,15 @@
     text-align: center;
     font-family: Inter;
     font-size: 48px;
+    margin-top: 30px;
     font-weight: 700;
 }
 .new-year-photo{
     max-width: 802.9px;
     height: 500px;
-    margin-bottom: 50px;
-    padding: 50px 398px 0px 399px;
+    display: block;
+    margin:0 auto;
+    margin-top: 80px;
 }
 /* Main section two */
 
@@ -574,7 +576,6 @@ footer {
 hr {
     background: rgba(255, 255, 255, 0.15);
     width: auto;
-    /* height: 0.5px; */
     margin: auto;
 }
 
